--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Profile Home</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <table>
@@ -10,9 +11,11 @@
                 <tr>
                     <td valign="top">
                         <ul>
-                            <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+                            <li><a
+                                    href="/Kanbas/Account/Profile/screen.html">Account</a></li>
                             <li><a href="#">Dashboard</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+                            <li><a
+                                    href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
                             <li><a href="#">Calendar</a></li>
                             <li><a href="#">Inbox</a></li>
                             <li><a href="#">History</a></li>
@@ -25,7 +28,8 @@
                     <td valign="top">
                         <ul>
                             <li><a href="#">Notifications</a></li>
-                            <li><a href="/Kanbas/Account/Profile/screen.html">Profile</a></li>
+                            <li><a
+                                    href="/Kanbas/Account/Profile/screen.html">Profile</a></li>
                             <li><a href="#">Files</a></li>
                             <li><a href="#">Settings</a></li>
                             <li><a href="#">ePortfolios</a></li>
@@ -44,8 +48,10 @@
                                         <h1>Harsh Agrawal's Profile</h1>
                                     </td>
                                     <td>
-                                        <button onclick="location.href='/Kanbas/Account/Profile/Edit/screen.html'">
-                                            <i class="fa fa-edit"></i> Edit Profile </button>
+                                        <button
+                                            onclick="location.href='/Kanbas/Account/Profile/Edit/screen.html'">
+                                            <i class="fa fa-edit"></i> Edit
+                                            Profile </button>
                                     </td>
                                 </tr>
                             </tbody>
