--- a/public/Kanbas/Courses/Assignments/index.html
+++ b/public/Kanbas/Courses/Assignments/index.html
@@ -13,61 +13,75 @@
         </select>
         <hr>
         <h2>ASSIGNMENTS 40% of Total <select><option>Edit</option>
-            <option>Spped Grader</option>
-            <option>Duplicate</option>
-            <option>Delete</option>
-            <option>Move To..</option>
-            <option>Send To..</option>
-            <option>Copy To..</option>
-            <option>Share To Commons</option></select></h2>
+                <option>Spped Grader</option>
+                <option>Duplicate</option>
+                <option>Delete</option>
+                <option>Move To..</option>
+                <option>Send To..</option>
+                <option>Copy To..</option>
+                <option>Share To Commons</option></select></h2>
         <ul>
-            <li><a href="#">A1 - ENV + HTML</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">A2 - CSS + BOOTSTRAP</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">A3 - JS + REACT</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">A4 - STATE + REDUX</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">A5 - NODE + SESSION</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">A6 - MONGO + MONGOOSE</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
+            <li><a href="#">A1 - ENV + HTML</a><br><a href="#">Multiple Modules
+                </a>| Not available yet</li>
+            <li><a href="#">A2 - CSS + BOOTSTRAP</a><br><a href="#">Multiple
+                    Modules </a>| Not available yet</li>
+            <li><a href="#">A3 - JS + REACT</a><br><a href="#">Multiple Modules
+                </a>| Not available yet</li>
+            <li><a href="#">A4 - STATE + REDUX</a><br><a href="#">Multiple
+                    Modules </a>| Not available yet</li>
+            <li><a href="#">A5 - NODE + SESSION</a><br><a href="#">Multiple
+                    Modules </a>| Not available yet</li>
+            <li><a href="#">A6 - MONGO + MONGOOSE</a><br><a href="#">Multiple
+                    Modules </a>| Not available yet</li>
         </ul>
 
         <h2>QUIZZES 10% of Total <select><option>Edit</option>
-            <option>Spped Grader</option>
-            <option>Duplicate</option>
-            <option>Delete</option>
-            <option>Move To..</option>
-            <option>Send To..</option>
-            <option>Copy To..</option>
-            <option>Share To Commons</option></select></h2>
+                <option>Spped Grader</option>
+                <option>Duplicate</option>
+                <option>Delete</option>
+                <option>Move To..</option>
+                <option>Send To..</option>
+                <option>Copy To..</option>
+                <option>Share To Commons</option></select></h2>
         <ul>
-            <li><a href="#">Q1 - HTML</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">Q2 - CSS</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">Q3 - JS_ES6</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">Q4 - NODE</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">Q5 - MONGO</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
+            <li><a href="#">Q1 - HTML</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
+            <li><a href="#">Q2 - CSS</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
+            <li><a href="#">Q3 - JS_ES6</a><br><a href="#">Multiple Modules
+                </a>| Not available yet</li>
+            <li><a href="#">Q4 - NODE</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
+            <li><a href="#">Q5 - MONGO</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
         </ul>
 
         <h2>EXAMS 20% of Total <select><option>Edit</option>
-            <option>Spped Grader</option>
-            <option>Duplicate</option>
-            <option>Delete</option>
-            <option>Move To..</option>
-            <option>Send To..</option>
-            <option>Copy To..</option>
-            <option>Share To Commons</option></select></h2>
+                <option>Spped Grader</option>
+                <option>Duplicate</option>
+                <option>Delete</option>
+                <option>Move To..</option>
+                <option>Send To..</option>
+                <option>Copy To..</option>
+                <option>Share To Commons</option></select></h2>
         <ul>
-            <li><a href="#">Midterm</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
-            <li><a href="#">Final</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
+            <li><a href="#">Midterm</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
+            <li><a href="#">Final</a><br><a href="#">Multiple Modules </a>| Not
+                available yet</li>
         </ul>
 
         <h2>PROJECTS 30% of Total <select><option>Edit</option>
-            <option>Spped Grader</option>
-            <option>Duplicate</option>
-            <option>Delete</option>
-            <option>Move To..</option>
-            <option>Send To..</option>
-            <option>Copy To..</option>
-            <option>Share To Commons</option></select></h2>
+                <option>Spped Grader</option>
+                <option>Duplicate</option>
+                <option>Delete</option>
+                <option>Move To..</option>
+                <option>Send To..</option>
+                <option>Copy To..</option>
+                <option>Share To Commons</option></select></h2>
         <ul>
-            <li><a href="#">Project</a><br><a href="#">Multiple Modules </a>| Not available yet</li>
+            <li><a href="#">Project</a><br><a href="#">Multiple Modules </a>|
+                Not available yet</li>
         </ul>
     </body>
 </html>
