--- a/public/Kanbas/Courses/Assignments/screen.html
+++ b/public/Kanbas/Courses/Assignments/screen.html
@@ -13,15 +13,22 @@
                                                 <ul>
                                                         <li><a
                                                                         href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-                                                        <li><a href="#">Dashboard</a></li>
+                                                        <li><a
+                                                                        href="#">Dashboard</a></li>
                                                         <li><a
                                                                         href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                                                        <li><a href="#">Calendar</a></li>
-                                                        <li><a href="#">Inbox</a></li>
-                                                        <li><a href="#">History</a></li>
-                                                        <li><a href="#">Studio</a></li>
-                                                        <li><a href="#">Commons</a></li>
-                                                        <li><a href="#">Help</a></li>
+                                                        <li><a
+                                                                        href="#">Calendar</a></li>
+                                                        <li><a
+                                                                        href="#">Inbox</a></li>
+                                                        <li><a
+                                                                        href="#">History</a></li>
+                                                        <li><a
+                                                                        href="#">Studio</a></li>
+                                                        <li><a
+                                                                        href="#">Commons</a></li>
+                                                        <li><a
+                                                                        href="#">Help</a></li>
                                                 </ul>
                                         </td>
 
@@ -66,7 +73,8 @@
                                                                         Collaborations</a></li>
                                                         <li><a href="#">
                                                                         Syllabus</a></li>
-                                                        <li><a href="/Kanbas/Courses/Settings/screen.html">
+                                                        <li><a
+                                                                        href="/Kanbas/Courses/Settings/screen.html">
                                                                         Settings</a></li>
                                                 </ul>
                                         </td>
@@ -106,7 +114,8 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a
                                                                         href="Edit/screen.html">A2
                                                                         - CSS +
@@ -114,7 +123,8 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a
                                                                         href="Edit/screen.html">A3
                                                                         - JS +
@@ -122,15 +132,18 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a
                                                                         href="Edit/screen.html">A4
                                                                         - STATE
-                                                                        + REDUX</a><br><a
+                                                                        +
+                                                                        REDUX</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a
                                                                         href="Edit/screen.html">A5
                                                                         - NODE +
@@ -138,7 +151,8 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a
                                                                         href="Edit/screen.html">A6
                                                                         - MONGO
@@ -147,10 +161,12 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                 </ul>
 
-                                                <h2>QUIZZES 10% of Total <select>
+                                                <h2>QUIZZES 10% of Total
+                                                        <select>
                                                                 <option>Edit</option>
                                                                 <option>Speed
                                                                         Grader</option>
@@ -171,30 +187,36 @@
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
-                                                        <li><a href="#">Q2 - CSS</a><br><a
+                                                                available
+                                                                yet</li>
+                                                        <li><a href="#">Q2 -
+                                                                        CSS</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a href="#">Q3 -
                                                                         JS_ES6</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a href="#">Q4 -
                                                                         NODE</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                         <li><a href="#">Q5 -
                                                                         MONGO</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                 </ul>
 
                                                 <h2>EXAMS 20% of Total <select>
@@ -213,16 +235,20 @@
                                                                         Commons</option>
                                                         </select></h2>
                                                 <ul>
-                                                        <li><a href="#">Midterm</a><br><a
+                                                        <li><a
+                                                                        href="#">Midterm</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
-                                                        <li><a href="#">Final</a><br><a
+                                                                available
+                                                                yet</li>
+                                                        <li><a
+                                                                        href="#">Final</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                 </ul>
 
                                                 <h2>PROJECTS 30% of Total
@@ -243,11 +269,13 @@
                                                         </select>
                                                 </h2>
                                                 <ul>
-                                                        <li><a href="#">Project</a><br><a
+                                                        <li><a
+                                                                        href="#">Project</a><br><a
                                                                         href="#">Multiple
                                                                         Modules
                                                                 </a>| Not
-                                                                available yet</li>
+                                                                available
+                                                                yet</li>
                                                 </ul>
                                         </td>
                                 </tr>
