--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -7,11 +7,13 @@
         <table>
             <tbody>
                 <tr>
-                    <td valign ="top">
+                    <td valign="top">
                         <ul>
-                            <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+                            <li><a
+                                    href="/Kanbas/Account/Profile/screen.html">Account</a></li>
                             <li><a href="#">Dashboard</a></li>
-                            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+                            <li><a
+                                    href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
                             <li><a href="#">Calendar</a></li>
                             <li><a href="#">Inbox</a></li>
                             <li><a href="#">History</a></li>
@@ -21,7 +23,7 @@
                         </ul>
                     </td>
 
-                    <td valign ="top">
+                    <td valign="top">
                         <ul>
                             <li><a href="/Kanbas/Courses/Home/screen.html">
                                     Home</a></li>
@@ -31,7 +33,8 @@
                                     Piazza</a></li>
                             <li><a href="#">
                                     Zoom Meetings</a></li>
-                            <li><a href="/Kanbas/Courses/Assignments/screen.html">
+                            <li><a
+                                    href="/Kanbas/Courses/Assignments/screen.html">
                                     Assignments</a></li>
                             <li><a href="#">
                                     Quizzes</a></li>
@@ -62,7 +65,7 @@
                         </ul>
                     </td>
 
-                    <td valign ="top">
+                    <td valign="top">
                         <button>Collapse All</button>
                         <button>View Progress</button>
                         <button>Module</button>
@@ -76,7 +79,8 @@
                                     <li>LEARNING OBJECTIVES
                                         <ul>
                                             <li>Introduction to the Course</li>
-                                            <li>Learn what is Web Development</li>
+                                            <li>Learn what is Web
+                                                Development</li>
                                             <li>Creating a Web Application</li>
                                             <li>Getting started with the 1st
                                                 assignment</li>
@@ -111,8 +115,10 @@
                                         <ul>
                                             <li>Learn how to create user
                                                 interfaces with HTML</li>
-                                            <li>Keep working on assignment 1</li>
-                                            <li>Deploy the assignment to Netlify</li>
+                                            <li>Keep working on assignment
+                                                1</li>
+                                            <li>Deploy the assignment to
+                                                Netlify</li>
                                         </ul>
                                     </li>
 
@@ -151,7 +157,8 @@
                             <li><a href="#">Lecture CS4550.12631.202410 Sep 11
                                     at
                                     11:45am</a></li>
-                            <li><a href="#">CS5610 01 SP23 Lecture Sep 11 at 6pm</a></li>
+                            <li><a href="#">CS5610 01 SP23 Lecture Sep 11 at
+                                    6pm</a></li>
                         </ul>
                     </td>
 
