--- a/public/Kanbas/Courses/Navigation/index.html
+++ b/public/Kanbas/Courses/Navigation/index.html
@@ -35,7 +35,8 @@
                                         Rubrics</a></li>
                         <li><a href="/Kanbas/Courses/Outcomes/screen.html">
                                         Outcomes</a></li>
-                        <li><a href="/Kanbas/Courses/Collaborations/screen.html">
+                        <li><a
+                                        href="/Kanbas/Courses/Collaborations/screen.html">
                                         Collaborations</a></li>
                         <li><a href="/Kanbas/Courses/Syllabus/screen.html">
                                         Syllabus</a></li>
