--- a/public/labs/a1/index.html
+++ b/public/labs/a1/index.html
@@ -120,7 +120,8 @@
       <label for="text-fields-username">Username:</label>
       <input id="text-fields-username" placeholder="jdoe" /><br />
       <label for="text-fields-password">Password:</label>
-      <input type="password" id="text-fields-password" value="123@#$asd" /><br />
+      <input type="password" id="text-fields-password"
+        value="123@#$asd" /><br />
       <label for="text-fields-first-name">First name:</label>
       <input type="text" id="text-fields-first-name" title="John" /><br />
       <label for="text-fields-last-name">Last name:</label>
@@ -227,7 +228,8 @@
     </select>
 
     <h2>Anchor tag</h2>
-    Please <a href="https://www.lipsum.com">click here</a> to get dummy text <br />
+    Please <a href="https://www.lipsum.com">click here</a> to get dummy text
+    <br />
     Checkout my <a href="other-page.html">other page</a>
 
   </body>
