--- a/public/Kanbas/Courses/Grades/index.html
+++ b/public/Kanbas/Courses/Grades/index.html
@@ -12,7 +12,8 @@
             <button>Configure</button><br />
             <h2><label for="text-fields-name">Student Name:</label></h2>
             <input id="text-fields-name" placeholder="Search Students" /><br />
-            <h2><label for="text-fields-assign-names">Assignment Names:</label></h2>
+            <h2><label for="text-fields-assign-names">Assignment
+                    Names:</label></h2>
             <input id="text-fields-assign-names"
                 placeholder="Search Assignments" /><br /><br />
             <button>Apply Filters</button>
@@ -29,45 +30,41 @@
                     <th>A6 REACT<br>Out of 100</th>
                     <th>A7 REDUX<br>Out of 100</th>
                     <th>A8 NODE<br>Out of 100</th>
-                    <th>A9 MONGO<br>Out of 100</th>
                 </tr>
             </thead>
             <tbody>
                 <tr align="center">
                     <td>Alice Wonderland</td>
                     <td>98</td>
-                    <td><input type="text" value="89"/></td>
+                    <td><input type="number" value=89 /></td>
                     <td>87</td>
                     <td>90</td>
                     <td>89</td>
                     <td>94</td>
                     <td>88</td>
-                    <td>87</td>
-                    <td><input type="text" value="100" /></td>
+                    <td><input type="number" value=100 /></td>
                 </tr>
                 <tr align="center">
                     <td>Princess Leia</td>
                     <td>98</td>
                     <td>80</td>
                     <td>87</td>
-                    <td><input type="text" value="82" /></td>
+                    <td><input type="number" value=82 /></td>
                     <td>100</td>
                     <td>94</td>
                     <td>85</td>
-                    <td><input type="text" value="84" /></td>
-                    <td>92</td>
+                    <td><input type="number" value=84 /></td>
                 </tr>
                 <tr align="center">
                     <td>Luke Skywalker</td>
                     <td>99</td>
                     <td>98</td>
-                    <td><input type="text" value="97" /></td>
+                    <td><input type="number" value=97 /></td>
                     <td>82</td>
                     <td>96</td>
                     <td>95</td>
                     <td>85</td>
                     <td>100</td>
-                    <td>93</td>
                 </tr>
                 <tr align="center">
                     <td>Han Solo</td>
@@ -76,10 +73,9 @@
                     <td>94</td>
                     <td>90</td>
                     <td>92</td>
-                    <td><input type="text" value="95" /></td>
+                    <td><input type="number" value=95 /></td>
                     <td>94</td>
                     <td>87</td>
-                    <td>94</td>
                 </tr>
             </tbody>
         </table>
