--- a/public/Kanbas/Courses/Home/index.html
+++ b/public/Kanbas/Courses/Home/index.html
@@ -21,7 +21,8 @@
                                     <li>LEARNING OBJECTIVES
                                         <ul>
                                             <li>Introduction to the Course</li>
-                                            <li>Learn what is Web Development</li>
+                                            <li>Learn what is Web
+                                                Development</li>
                                             <li>Creating a Web Application</li>
                                             <li>Getting started with the 1st
                                                 assignment</li>
@@ -30,16 +31,22 @@
 
                                     <li>READING
                                         <ul>
-                                            <li>Full Stack Developer - Chapter 1 - Introduction</li>
-                                            <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
+                                            <li>Full Stack Developer - Chapter 1
+                                                - Introduction</li>
+                                            <li>Full Stack Developer - Chapter 2
+                                                - Creating User Interfaces With
+                                                HTML</li>
                                         </ul>
                                     </li>
 
                                     <li>SLIDES
                                         <ul>
-                                            <li><a href="#">Introduction to Web Development</a></li>
-                                            <li><a href="#">Creating an HTTP sever with Node.js</a></li>
-                                            <li><a href="#">Creating a React Application</a></li>
+                                            <li><a href="#">Introduction to Web
+                                                    Development</a></li>
+                                            <li><a href="#">Creating an HTTP
+                                                    sever with Node.js</a></li>
+                                            <li><a href="#">Creating a React
+                                                    Application</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -48,16 +55,22 @@
                                 <ul>
                                     <li>LEARNING OBJECTIVES
                                         <ul>
-                                            <li>Learn how to create user interfaces with HTML</li>
-                                            <li>Keep working on assignment 1</li>
-                                            <li>Deploy the assignment to Netlify</li>
+                                            <li>Learn how to create user
+                                                interfaces with HTML</li>
+                                            <li>Keep working on assignment
+                                                1</li>
+                                            <li>Deploy the assignment to
+                                                Netlify</li>
                                         </ul>
                                     </li>
 
                                     <li>READINGS
                                         <ul>
-                                            <li>Full Stack Developer - Chapter 1 - Introduction</li>
-                                            <li>Full Stack Developer - Chapter 2 - Creating User Interfaces With HTML</li>
+                                            <li>Full Stack Developer - Chapter 1
+                                                - Introduction</li>
+                                            <li>Full Stack Developer - Chapter 2
+                                                - Creating User Interfaces With
+                                                HTML</li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -82,10 +95,12 @@
                         <a href="#">View Calendar</a>
                         <ul>
                             <li><a href="#">Lecture CS4550.12631.202410 Sep 7 at
-                                11:45am</a></li>
-                            <li><a href="#">Lecture CS4550.12631.202410 Sep 11 at
-                                11:45am</a></li>
-                            <li><a href="#">CS5610 01 SP23 Lecture Sep 11 at 6pm</a></li>
+                                    11:45am</a></li>
+                            <li><a href="#">Lecture CS4550.12631.202410 Sep 11
+                                    at
+                                    11:45am</a></li>
+                            <li><a href="#">CS5610 01 SP23 Lecture Sep 11 at
+                                    6pm</a></li>
                         </ul>
                     </td>
 
