--- a/public/Kanbas/Courses/Settings/Navigation/index.html
+++ b/public/Kanbas/Courses/Settings/Navigation/index.html
@@ -8,57 +8,67 @@
     </head>
 
     <body>
-            <a href="screen.html">Details</a>
-            <a href="#">Sections</a>
-            <a href="Navigation/screen.html">Navigation</a>
-            <a href="#">Apps</a>
-            <a href="#">Feature Options</a>
-            <a href="#">Integrations</a>
+        <a href="screen.html">Details</a>
+        <a href="#">Sections</a>
+        <a href="Navigation/screen.html">Navigation</a>
+        <a href="#">Apps</a>
+        <a href="#">Feature Options</a>
+        <a href="#">Integrations</a>
 
-            <table>
-                <tr>
-                    <td valign="top">
-                        <h2>Drag and drop items to reorder them in the course navigation.</h2>
-                        <ul>
-                            <li>Home</li>
-                            <li>Modules</li>
-                            <li>Piazza</li>
-                            <li>Zoom Meetings</li>
-                            <li>Assignments</li>
-                            <li>Quizzes</li>
-                            <li>Grades</li>
-                            <li>People</li>
-                            <li>Panopto Video</li>
-                        </ul>
-                    </td>
-                    <td>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td valign="top">
-                        <h2>Drag items here to hide them from students</h2>
-                        <p>Disabling most pages will cause students to be redirected to the home page</p>
-                        <ul>
-                            <li>Chat<br>Page disabled, won't appear in navigation</li>
-                            <li>SCORM<br>Page disabled, won't appear in navigation</li>
-                            <li>Attendance<br>Page disabled, won't appear in navigation</li>
-                            <li>Barnes and Noble Bookstore<br>Page disabled, won't appear in navigation</li>
-                            <li>Digication<br>Page disabled, won't appear in navigation</li>
-                            <li>Top Hat<br>Page disabled, won't appear in navigation</li>
-                        </ul>
-                    </td>
-                    <td>
-                        <ul>
-                            <li>Syllabus<br>Page disabled, won't appear in navigation</li>
-                            <li>Perusall<br>Page disabled, won't appear in navigation</li>
-                            <li>MS Teams Meetings<br>Page disabled, won't appear in navigation</li>
-                            <li>FACT Reporting and Photo Roster<br>Page disabled, won't appear in navigation</li>
-                            <li>Gradescope 1.3<br>Page disabled, won't appear in navigation</li>
-                            <li>Credentials<br>Page disabled, won't appear in navigation</li>
-                        </ul>
-                    </td>
-                  </tr>
-            </table>                         
+        <table>
+            <tr>
+                <td valign="top">
+                    <h2>Drag and drop items to reorder them in the course
+                        navigation.</h2>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Modules</a></li>
+                        <li><a href="#">Piazza</a></li>
+                        <li><a href="#">Zoom Meetings</a></li>
+                        <li><a href="#">Assignments</a></li>
+                        <li><a href="#">Quizzes</a></li>
+                        <li><a href="#">Grades</a></li>
+                        <li><a href="#">People</a></li>
+                        <li><a href="#">Panopto Video</a></li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td valign="top">
+                    <h2>Drag items here to hide them from students</h2>
+                    <p>Disabling most pages will cause students to be redirected
+                        to the home page</p>
+                    <ul>
+                        <li><a href="#">Chat<br>Page disabled, won't appear in
+                                navigation</li></a><br>
+                        <li><a href="#">SCORM<br>Page disabled, won't appear in
+                                navigation</li></a><br>
+                        <li><a href="#">Attendance<br>Page disabled, won't
+                                appear in navigation</li></a><br>
+                        <li><a href="#">Barnes and Noble Bookstore<br>Page
+                                disabled, won't appear in
+                                navigation</li></a><br>
+                        <li><a href="#">Digication<br>Page disabled, won't
+                                appear in navigation</li></a><br>
+                        <li><a href="#">Top Hat<br>Page disabled, won't appear
+                                in navigation</li></a><br>
+                        <li><a href="#">Syllabus<br>Page disabled, won't appear
+                                in navigation</li></a><br>
+                        <li><a href="#">Perusall<br>Page disabled, won't appear
+                                in navigation</li></a><br>
+                        <li><a href="#">MS Teams Meetings<br>Page disabled,
+                                won't appear in navigation</li></a><br>
+                        <li><a href="#">FACT Reporting and Photo Roster<br>Page
+                                disabled, won't appear in
+                                navigation</li></a><br>
+                        <li><a href="#">Gradescope 1.3<br>Page disabled, won't
+                                appear in navigation</li></a><br>
+                        <li><a href="#">Credentials<br>Page disabled, won't
+                                appear in navigation</li></a>
+                    </ul>
+                </td>
+            </tr>
+        </table>
 
     </body>
 
