--- a/public/Kanbas/Courses/Settings/Navigation/screen.html
+++ b/public/Kanbas/Courses/Settings/Navigation/screen.html
@@ -1,127 +1,153 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Course Settings Home</title>
-</head>
+    <head>
+        <title>Course Settings Home</title>
+    </head>
 
-<body>
-    <table>
-        <tbody>
-            <tr>
-                <td valign="top">
-                    <ul>
-                        <li><a href="/Kanbas/Account/Profile/screen.html">Account</a></li>
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-                        <li><a href="#">Calendar</a></li>
-                        <li><a href="#">Inbox</a></li>
-                        <li><a href="#">History</a></li>
-                        <li><a href="#">Studio</a></li>
-                        <li><a href="#">Commons</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                </td>
+    <body>
+        <table>
+            <tbody>
+                <tr>
+                    <td valign="top">
+                        <ul>
+                            <li><a
+                                    href="/Kanbas/Account/Profile/screen.html">Account</a></li>
+                            <li><a href="#">Dashboard</a></li>
+                            <li><a
+                                    href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
+                            <li><a href="#">Calendar</a></li>
+                            <li><a href="#">Inbox</a></li>
+                            <li><a href="#">History</a></li>
+                            <li><a href="#">Studio</a></li>
+                            <li><a href="#">Commons</a></li>
+                            <li><a href="#">Help</a></li>
+                        </ul>
+                    </td>
 
-                <td valign="top">
-                    <ul>
-                        <li><a href="/Kanbas/Courses/Home/screen.html">
-                                Home</a></li>
-                        <li><a href="#">
-                                Modules</a></li>
-                        <li><a href="#">
-                                Piazza</a></li>
-                        <li><a href="#">
-                                Zoom Meetings</a></li>
-                        <li><a href="/Kanbas/Courses/Assignments/screen.html">
-                                Assignments</a></li>
-                        <li><a href="#">
-                                Quizzes</a></li>
-                        <li><a href="/Kanbas/Courses/Grades/screen.html">
-                                Grades</a></li>
-                        <li><a href="#">
-                                People</a></li>
-                        <li><a href="#">
-                                Panopto Video</a></li>
-                        <li><a href="#">
-                                Discussions</a></li>
-                        <li><a href="#">
-                                Announcements</a></li>
-                        <li><a href="#">
-                                Pages</a></li>
-                        <li><a href="#">
-                                Files</a></li>
-                        <li><a href="#">
-                                Rubrics</a></li>
-                        <li><a href="#">
-                                Outcomes</a></li>
-                        <li><a href="#">
-                                Collaborations</a></li>
-                        <li><a href="#">
-                                Syllabus</a></li>
-                        <li><a href="/Kanbas/Courses/Settings/screen.html">
-                                Settings</a></li>
-                    </ul>
-                </td>
-                <td>
+                    <td valign="top">
+                        <ul>
+                            <li><a href="/Kanbas/Courses/Home/screen.html">
+                                    Home</a></li>
+                            <li><a href="#">
+                                    Modules</a></li>
+                            <li><a href="#">
+                                    Piazza</a></li>
+                            <li><a href="#">
+                                    Zoom Meetings</a></li>
+                            <li><a
+                                    href="/Kanbas/Courses/Assignments/screen.html">
+                                    Assignments</a></li>
+                            <li><a href="#">
+                                    Quizzes</a></li>
+                            <li><a href="/Kanbas/Courses/Grades/screen.html">
+                                    Grades</a></li>
+                            <li><a href="#">
+                                    People</a></li>
+                            <li><a href="#">
+                                    Panopto Video</a></li>
+                            <li><a href="#">
+                                    Discussions</a></li>
+                            <li><a href="#">
+                                    Announcements</a></li>
+                            <li><a href="#">
+                                    Pages</a></li>
+                            <li><a href="#">
+                                    Files</a></li>
+                            <li><a href="#">
+                                    Rubrics</a></li>
+                            <li><a href="#">
+                                    Outcomes</a></li>
+                            <li><a href="#">
+                                    Collaborations</a></li>
+                            <li><a href="#">
+                                    Syllabus</a></li>
+                            <li><a href="/Kanbas/Courses/Settings/screen.html">
+                                    Settings</a></li>
+                        </ul>
+                    </td>
+                    <td>
 
-                    <a href="/Kanbas/Courses/Settings/screen.html">Details</a>
-                    <a href="#">Sections</a>
-                    <a href="Navigation/screen.html">Navigation</a>
-                    <a href="#">Apps</a>
-                    <a href="#">Feature Options</a>
-                    <a href="#">Integrations</a>
+                        <a
+                            href="/Kanbas/Courses/Settings/screen.html">Details</a>
+                        <a href="#">Sections</a>
+                        <a href="Navigation/screen.html">Navigation</a>
+                        <a href="#">Apps</a>
+                        <a href="#">Feature Options</a>
+                        <a href="#">Integrations</a>
 
-                    <table>
-                        <tr>
-                            <td valign="top">
-                                <h2>Drag and drop items to reorder them in the course navigation.</h2>
-                                <ul>
-                                    <li>Home</li>
-                                    <li>Modules</li>
-                                    <li>Piazza</li>
-                                    <li>Zoom Meetings</li>
-                                    <li>Assignments</li>
-                                    <li>Quizzes</li>
-                                    <li>Grades</li>
-                                    <li>People</li>
-                                    <li>Panopto Video</li>
-                                </ul>
-                            </td>
-                            <td>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td valign="top">
-                                <h2>Drag items here to hide them from students</h2>
-                                <p>Disabling most pages will cause students to be redirected to the home page</p>
-                                <ul>
-                                    <li>Chat<br>Page disabled, won't appear in navigation</li>
-                                    <li>SCORM<br>Page disabled, won't appear in navigation</li>
-                                    <li>Attendance<br>Page disabled, won't appear in navigation</li>
-                                    <li>Barnes and Noble Bookstore<br>Page disabled, won't appear in navigation</li>
-                                    <li>Digication<br>Page disabled, won't appear in navigation</li>
-                                    <li>Top Hat<br>Page disabled, won't appear in navigation</li>
-                                </ul>
-                            </td>
-                            <td>
-                                <ul>
-                                    <li>Syllabus<br>Page disabled, won't appear in navigation</li>
-                                    <li>Perusall<br>Page disabled, won't appear in navigation</li>
-                                    <li>MS Teams Meetings<br>Page disabled, won't appear in navigation</li>
-                                    <li>FACT Reporting and Photo Roster<br>Page disabled, won't appear in navigation
-                                    </li>
-                                    <li>Gradescope 1.3<br>Page disabled, won't appear in navigation</li>
-                                    <li>Credentials<br>Page disabled, won't appear in navigation</li>
-                                </ul>
-                            </td>
-                        </tr>
-                    </table>
-
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</body>
+                        <table>
+                            <tr>
+                                <td valign="top">
+                                    <h2>Drag and drop items to reorder them in
+                                        the course navigation.</h2>
+                                    <ul>
+                                        <li><a href="#">Home</a></li>
+                                        <li><a href="#">Modules</a></li>
+                                        <li><a href="#">Piazza</a></li>
+                                        <li><a href="#">Zoom Meetings</a></li>
+                                        <li><a href="#">Assignments</a></li>
+                                        <li><a href="#">Quizzes</a></li>
+                                        <li><a href="#">Grades</a></li>
+                                        <li><a href="#">People</a></li>
+                                        <li><a href="#">Panopto Video</a></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td valign="top">
+                                    <h2>Drag items here to hide them from
+                                        students</h2>
+                                    <p>Disabling most pages will cause students
+                                        to be redirected to the home page</p>
+                                    <ul>
+                                        <li><a href="#">Chat<br>Page disabled,
+                                                won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">SCORM<br>Page disabled,
+                                                won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Attendance<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Barnes and Noble
+                                                Bookstore<br>Page disabled,
+                                                won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Digication<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Top Hat<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Syllabus<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Perusall<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">MS Teams
+                                                Meetings<br>Page disabled, won't
+                                                appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">FACT Reporting and Photo
+                                                Roster<br>Page disabled, won't
+                                                appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Gradescope 1.3<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a><br>
+                                        <li><a href="#">Credentials<br>Page
+                                                disabled, won't appear in
+                                                navigation</li></a>
+                                    </ul>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </body>
 
 </html>
