--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
 </head>
 
 <body>
-  <h1>Web Development Assignment 1</h1>
-  <h3><a href="/labs/a1/index.html">Lab</a></h3>
-  <h3><a href="/Kanbas/Courses/Home/screen.html">Kanbas</a></h3>
+  <h1>Web Development Assignment</h1>
+  <h3><a href="/labs/a1/index.html">Lab 1</a></h3>
+  <h3><a href="/labs/a2/index.html">Lab 2</a></h3>
+  <h3><a href="/Kanbas/Dashboard/screen.html">Kanbas</a></h3>
 </body>
 </html>
