--- a/public/Kanbas/Navigation/index.html
+++ b/public/Kanbas/Navigation/index.html
@@ -2,18 +2,25 @@
 <html>
     <head>
         <title>Kanbas Navigation</title>
+        <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
     </head>
     <body>
-        <ul>
-            <li><a href="/Kanbas/Account/Navigation/index.html">Account</a></li>
-            <li><a href="/Kanbas/Dashboard/screen.html">Dashboard</a></li>
-            <li><a href="/Kanbas/Courses/Home/screen.html">Courses</a></li>
-            <li><a href="/Kanbas/Calendar/index.html">Calendar</a></li>
-            <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-            <li><a href="/Kanbas/History/index.html">History</a></li>
-            <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-            <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-            <li><a href="/Kanbas/Help/index.html">Help</a></li>
+        <ul class="wd-kanbas-navigation">
+            <li><a href="http://northeastern.edu">N</a></li>
+            <li><a href="/Kanbas/Account/Navigation/index.html"><i class="fa fa-user"></i> <br>Account</a></li>
+            <li class="wd-active">
+                <a href="/Kanbas/Dashboard/screen.html">
+                  <i class="fa fa-tachometer"></i> Dashboard</a>
+            </li> 
+            <li><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i> Courses</a></li>
+            <li><a href="/Kanbas/Calendar/index.html"> <i class="fa fa-calendar"></i> Calendar</a></li>
+            <li><a href="/Kanbas/Inbox/index.html"><i class="fa fa-inbox"></i> <br> Inbox</a></li>
+            <li><a href="/Kanbas/History/index.html"><i class="fa fa-history"></i> <br> History</a></li>
+            <li><a href="/Kanbas/Studio/index.html"><i class="fa fa-desktop"></i> <br> Studio</a></li>
+            <li><a href="/Kanbas/Help/index.html"><i class="fa fa-question-circle"></i><br> Help</a></li>
+            <li><a href="/Kanbas/Courses/Home/screen.html"><button><i class="fa fa-close"></i></button></a></li>
         </ul>
     </body>
 </html>
