--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -86,7 +86,7 @@
                                 </select>
                                 <button style=" background-color: red; 
                         color: white; border: 1px black solid;"><i class="fa fa-plus"></i> Module</button>
-                            <a href="/Kanbas/Courses/Navigation/index.html"><button><i class="fa fa-ellipsis-v"></i></button></a> 
+                            <a href="/Kanbas/Courses/Navigation/index.html"><button><i class="fa fa-chevron-right"></i></button></a> 
 
                             </div>
                             <li class="list-group-item">
